--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
-    <meta name="viewport" content="initial-scale=1, width=device-width"/>
-    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@300;400;500;600;700;800;900&display=swap"
-          rel="stylesheet">
-    <title>IMG</title>
+  <meta charset="UTF-8"/>
+  <link rel="icon" type="image/svg+xml" href="./public/svgs/head/favicon.ico"/>
+  <link rel="icon" type="image/png" href="./public/svgs/head/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/public/svgs/head/favicon-32x32.png" sizes="32x32">
+  <meta name="viewport" content="initial-scale=1, width=device-width"/>
+  <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+  <title>IMG</title>
 </head>
 
 <body>
